# py-template

./: .pre-commit-config.yaml  .ruff.toml  .talismanrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: uv.yml
src/py_template/cli/: main.py  main_test.py
