[project]
name = "py-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gabriele Girelli", email = "1636105+ggirelli@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
py-template = "py_template.cli.main:main"

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.4",
    "ty>=0.0.1a15", # Currently added for testing purposes only
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/**/*.py"]
exclude = [
    "*_test.py",    # Exclude unittest files
    "**/test_data", # Exclude data for unit tests
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src" }]
